# OLAF

./: .gitignore  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
Agents Journal/: 2025-11-02-mary-brainstorming-olaf-expressiveness.md  PROMPTS.md
Agents Journal/James (dev)/: 2025-10-26.md  2025-10-27-the-day-olaf-opened-its-eyes.md  2025-10-28-eye-expression-redesign.md  2025-10-29-eye-expression-redesign.md
Agents Journal/Winston_journal/: 2025-10-30-complete-project-restructure.md
agents/: README.md
buildlogs/: 2025-10-26.md
config/: api-keys.template.env
docs/: PC_DEVELOPMENT_SETUP.md  architecture-quick-ref.md  architecture.md  brainstorming-session-results.md  branding-guide.md  brief.md  prd.md  troubleshooting-epic1.md
docs/architecture/: coding-standards.md  components.md  data-models.md  esp32-s3-decision.md  hardware-updates-v1.2.md  high-level-architecture.md  hybrid-development-architecture.md  index.md  introduction.md  ros2-node-architecture.md  source-tree.md  tech-stack.md
docs/articles/: odrive-setup-tutorial.md  research-backed-expressiveness.md  self-balancing-circuit-build-log.md
docs/epics/: epic-01-foundation.md  epic-02-3d-design.md  epic-03-personality.md  epic-04-conversational-ai.md
docs/prd/: epic-01-foundation.md  epic-02-complete-onshape-design.md  epic-03-complete-head-assembly.md  epic-05-core-torso-power-system.md  epic-06-self-balancing-base.md  epic-09-super-expressive-system.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.1.refactor-module-structure.md  1.1.repository-setup.md  1.10.initial-design-concept.md  1.11.epic1-documentation.md  1.2.power-system.md  1.2.raspberry-pi-ros2-setup.md  1.3.body-module-hardware-assembly.md  1.3.head-module-hardware-assembly.md  1.3.raspberry-pi-ros2-setup.md  1.4.body-module-esp32-firmware.md  1.4.head-module-esp32-firmware.md  1.5.ros2-body-driver-node.md  1.5.ros2-head-driver-node.md  1.6.minimal-orchestrator.md  1.7.test-harness-cli.md  1.8.launch-file.md  1.9.30-minute-test.md  3.1.3d-print-head-components.md  3.10.head-assembly-integration-testing.md  3.11.epic3-documentation.md  3.2.head-module-pcb-assembly.md  3.3.ear-servo-assembly.md  3.4.neck-gimbal-assembly.md  3.5.ears-neck-esp32-firmware.md  3.6.head-firmware-presence-sensor.md  3.7.ros2-ears-neck-driver.md  3.8.ros2-head-driver-presence.md  3.9.coordinated-expression-system.md  5.1.3d-print-torso-power-enclosure.md  5.2.heart-lcd-hardware-assembly.md  5.3.power-system-assembly.md  5.4.raspberry-pi-torso-integration.md  5.5.body-module-esp32-firmware.md  5.6.ros2-body-driver-power-monitoring.md  5.7.coordinated-expression-body-integration.md  5.8.power-system-validation-testing.md  5.9.epic5-documentation.md  6.1.3d-print-base-platform.md  6.10.base-integration-testing.md  6.11.epic6-documentation.md  (+8 more)
docs/user-guide/: setup-instructions.md
firmware/: README.md
firmware/base/: README.md  platformio.ini
firmware/head/: i2c_test_commands.txt  test_expressions.sh
hardware/3d-models/: Head Base parts - head-front-panel.stl
hardware/bom/: epic1_bom.csv
hardware/wiring-diagrams/: epic1-head-module-wiring.md
modules/ears-neck/: README.md  platformio.ini
modules/head/: README.md  platformio.ini  test_expressions.sh
olaf_interfaces/: CMakeLists.txt  package.xml
olaf_interfaces/msg/: Expression.msg  ModuleStatus.msg
orchestrator/: package.xml  requirements.txt
orchestrator/config/: module_i2c_addresses.yaml
orchestrator/launch/: app_nodes.launch.py  drivers_only.launch.py  olaf_full.launch.py
orchestrator/ros2_nodes/hardware_drivers/: head_driver.py
shared/: i2c_registers.h
tools/diagnostics/: ESP32_CONTROL.md  QUICK_START.md  README.md  configure_odrive_uart.py  odrive_demo.py  odrive_test_and_calibrate.py  (+1 more)
(+52 files in other folders)
